update build gradle