@@ -1,5 +1,14 @@
 plugins {
-    id 'java-library'
+    id 'java'
+    id 'jacoco'
+    id 'application'
+    id 'info.solidsoft.pitest' version '1.7.4'
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
 
 repositories {
@@ -8,33 +17,63 @@ repositories {
 
 dependencies {
 
-    testImplementation(platform("org.junit:junit-bom:5.7.1"))
+    testImplementation(platform("org.junit:junit-bom:5.8.2"))
     testImplementation("org.junit.jupiter:junit-jupiter")
-    testImplementation("org.assertj:assertj-core:3.19.0")
-    testImplementation("com.approvaltests:approvaltests:11.0.0")
+    testImplementation("org.assertj:assertj-core:3.22.0")
+    testImplementation("com.approvaltests:approvaltests:15.2.0")
+    testImplementation("com.larseckart:junit-tcr-extensions:0.0.1")
+    testImplementation("org.mockito:mockito-core:4.5.1")
+    testImplementation("org.mockito:mockito-junit-jupiter:4.5.1")
 }
 
 tasks.withType(JavaCompile) {
     options.compilerArgs.add("-Xlint:all")
     options.incremental = true
+}
 
-    if (jdkWithPreviewFeatures())
-        options.compilerArgs.add("--enable-preview")
+application {
+    mainClass.set("ferry.booking.Program")
+}
+
+jar {
+    manifest {
+        attributes "Main-Class": "ferry.booking.Program"
+    }
+
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
 test {
     useJUnitPlatform()
     testLogging {
-        events "skipped", "failed"
-        exceptionFormat "full"
+        events "passed", "skipped", "failed"
     }
-    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
-    if (jdkWithPreviewFeatures())
-        jvmArgs("--enable-preview")
+    finalizedBy jacocoTestReport
 }
 
-static def jdkWithPreviewFeatures() {
-    def currentJvm = org.gradle.internal.jvm.Jvm.current()
-    def matcher = currentJvm =~ /^\d+/
-    return matcher[0].toInteger() > 11
+jacoco {
+    toolVersion = "0.8.7"
+}
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = false
+        csv.required = false
+        html.destination file("${buildDir}/jacocoHtml")
+    }
+}
+
+project.tasks.check.dependsOn("pitest")
+pitest {
+    junit5PluginVersion = '0.15'
+    testSourceSets = [sourceSets.test]
+    mainSourceSets = [sourceSets.main]
+    targetClasses = ['ferry.booking.*']
+    pitestVersion = '1.7.0'
+    threads = 4
+    outputFormats = ['XML', 'HTML']
+    timestampedReports = false
 }
